--- a/CleanArch/WebApplication1/Areas/Admin/Views/Phucap/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Phucap/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@{
+﻿@using Application.DTOs
+@using Domain.Entities
+@using Infrastructure.Persistence.Actions
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
-
+@model (List<PhuCapDTO> phuCapDTOs, ThongTinDuLieuCuoi thongTinDuLieuCuois, PhuCapDTO phuCapDTO)
 <div class="content-body">
 
     <div class="row page-titles mx-0">
@@ -20,26 +23,60 @@
             <div class="col-lg-4 col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="card-title">
-                            <h4>Thêm Dự Án</h4>
-                        </div>
-                        <form action="" method="post">
-                            <div class="form-group">
-                                <label for="maphucap">Mã phụ cấp</label>
-                                <input type="text" placeholder="Mã dự án" class="form-control" name="maphuap" required>
+                        @if (ViewBag.Update == "yes")
+                        {
+                            <div class="card-title">
+                                <h4>Thêm Dự Án</h4>
+                                @if (ViewBag.Error != null)
+                                {
+                                    <h5><p class="td-center" style="color:red;">@ViewBag.Error</p></h5>
+                                }
                             </div>
-                            <div class="form-group">
-                                <label for="tenphucap">Tên tên phụ cấp</label>
-                                <input type="text" placeholder="Tên dự án" class="form-control" name="tenphucap" required>
+                            <form method="post" asp-controller="PhuCap" asp-action="Update">
+                                <div class="form-group">
+                                    <label for="maphucap">Mã phụ cấp</label>
+                                    <input type="text" value="@Model.phuCapDTO.PhuCapId" placeholder="Mã dự án" class="form-control" name="PhuCapId" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="tenphucap">Tên tên phụ cấp</label>
+                                    <input type="text" value="@Model.phuCapDTO.TenPhuCap" placeholder="Tên dự án" class="form-control" name="TenPhuCap" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="tienphucap">Tiền phụ cấp</label>
+                                    <input type="text" value="@Model.phuCapDTO.TienPhuCap" placeholder="Thưởng dự án" class="form-control" name="TienPhuCap" required>
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" value="themphucap" name="themphucap" class="btn btn-primary">
+                                </div>
+                            </form>
+                        }
+                        else
+                        {
+                            <div class="card-title">
+                                <h4>Thêm Dự Án</h4>
+                                @if (ViewBag.Error != null)
+                                {
+                                    <h5><p class="td-center" style="color:red;">@ViewBag.Error</p></h5>
+                                }
                             </div>
-                            <div class="form-group">
-                                <label for="tienphucap">Tiền phụ cấp</label>
-                                <input type="text" placeholder="Thưởng dự án" class="form-control" name="tienphucap" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="themphucap" name="themphucap" class="btn btn-primary">
-                            </div>
-                        </form>
+                            <form method="post" asp-controller="DuAn" asp-action="AddPhuCap">
+                                <div class="form-group">
+                                    <label for="maphucap">Mã phụ cấp</label>
+                                    <input type="text" value="@Model.phuCapDTO.PhuCapId" placeholder="Mã dự án" class="form-control" name="PhuCapId" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="tenphucap">Tên tên phụ cấp</label>
+                                    <input type="text" value="@Model.phuCapDTO.TenPhuCap" placeholder="Tên dự án" class="form-control" name="TenPhuCap" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="tienphucap">Tiền phụ cấp</label>
+                                    <input type="text" value="@Model.phuCapDTO.TienPhuCap" placeholder="Thưởng dự án" class="form-control" name="TienPhuCap" required>
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" value="themphucap" name="themphucap" class="btn btn-primary">
+                                </div>
+                            </form>
+                        }
                     </div>
 
                 </div>
@@ -48,14 +85,14 @@
                         <div class="card-title">
                             <h4>Thêm nhân viên vào phụ cấp</h4>
                         </div>
-                        <form action="#" method="post">
+                        <form method="post" asp-controller="PhuCap" asp-action="AddNVPC">
                             <div class="form-group">
                                 <label for="maphucap">Mã phụ cấp</label>
-                                <input type="text" placeholder="" class="form-control" name="add-maphucap" value="" required>
+                                <input type="text" placeholder="" class="form-control" name="PhuCapId" required>
                             </div>
                             <div class="form-group">
                                 <label for="manhanvien">Mã nhân viên</label>
-                                <input type="text" placeholder="" class="form-control" name="add-manhanvien" value="" required>
+                                <input type="text" placeholder="" class="form-control" name="NhanVienId" required>
                             </div>
                             <div class="form-group">
                                 <input type="submit" value="Thêm nhân viên" name="edit-category" class="btn btn-primary">
@@ -69,6 +106,14 @@
                     <div class="card-body">
                         <div class="card-title">
                             <h3>Dự Án</h3>
+                            @if (ViewBag.ErrorRemove == "yes")
+                            {
+                                <p class="td-center" style="color:red;">@ViewBag.Remove</p>
+                            }
+                            else
+                            {
+                                <p class="td-center" style="color:green;">@ViewBag.Remove</p>
+                            }
                         </div>
                         <div class="table-responsive">
                             <table class="table table-bordered table-striped table-hover">
@@ -83,27 +128,20 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>Thằng lòn</td>
-                                        <td>Thằng lòn</td>
-                                        <td>Thằng lòn</td>
-                                        <td style="text-align: center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
-                                        <td style="text-align: center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
-                                        <td style="text-align: center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-close"></i></button></td>
-                                    </tr>
-                                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;text-align: center;">Are you sure to delete<br>Thằng lòn ?</h3>
-                                                </div>
-                                                <div class="modal-footer" style="margin: auto;">
-                                                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                                                    <a href="#"><button type="button" class="btn btn-danger">Yes, delete it !</button></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    @foreach (PhuCapDTO phuCapDTO in Model.phuCapDTOs)
+                                    {
+                                        <tr>
+                                            <td>@phuCapDTO.PhuCapId</td>
+                                            <td>@phuCapDTO.TenPhuCap</td>
+                                            <td>@phuCapDTO.TienPhuCap</td>
+                                            <td style="text-align: center"><a asp-controller="PhuCap" asp-action="PhucapDetail" method="post" ><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
+                                            <td style="text-align: center"><a asp-controller="PhuCap" asp-action="UpdateId" method="post"  ><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
+                                            <td style="text-align: center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(phuCapDTO.PhuCapId
+                                            + "xoa")"><i class="fa fa-close"></i></button></td>
+                                        </tr>
+                                        
+                                    }
+
                                 </tbody>
                             </table>
                         </div>
@@ -111,6 +149,24 @@
                 </div>
             </div>
         </div>
+     @foreach (PhuCapDTO phuCapDTO in Model.phuCapDTOs)
+        {
+            <div class="modal fade" id="@(phuCapDTO.PhuCapId + "xoa")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;text-align: center;">Bạn chắc chắn muốn xóa<br>dự án @phuCapDTO.TenPhuCap?</h3>
+                        </div>
+                        <div class="modal-footer" style="margin: auto;">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Hủy</button>
+                            <form method="post" asp-controller="DuAn" asp-action="Remove">
+                                <button name="DuAnId" type="submit" class="btn btn-danger" value="@phuCapDTO.PhuCapId">Xóa dự án</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
     </div>
     <!-- #/ container -->
 </div>
