Thêm giao điện cho nhân viên
16/12/2020

--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/AddNV.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/AddNV.cshtml
@@ -68,7 +68,7 @@
                                                 @if (Model.phongBanDTOs.Count == 1)
                                                 {
                                                     <select class="form-control" name="PhongBanId" readonly="readonly" required>
-                                                        <option value="">@Model.phongBanDTOs[0].TenPhongBan</option>
+                                                        <option value="@Model.phongBanDTOs[0].PhongBanId">@Model.phongBanDTOs[0].TenPhongBan</option>
                                                     </select>
                                                 }
                                                 else
