--- a/CleanArch/WebApplication1/Views/Home/Index.cshtml
+++ b/CleanArch/WebApplication1/Views/Home/Index.cshtml
@@ -55,7 +55,7 @@
                         </div>
                     }
                     <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                        <input class="input100" type="text" name="email" placeholder="Email" value="nv00000@email.com">
+                        <input class="input100" type="text" name="email" placeholder="Email" value="admin@gmail.com">
                         <span class="focus-input100"></span>
                         <span class="symbol-input100">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
