--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Update.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Update.cshtml
@@ -50,7 +50,7 @@
                                 <div class="col-lg-3">
                                     <div class="input-group">
                                         <div class="form-file">
-                                            <input type="file" class="inputfile" name="HinhAnh" id="your_picture" onchange="readURL(this);" data-multiple-caption="{count} files selected" multiple />
+                                            <input value="@linkImg" type="file" class="inputfile" name="HinhAnh" id="your_picture" onchange="readURL(this);" data-multiple-caption="{count} files selected" multiple />
                                             <label for="your_picture">
                                                 <figure>
                                                     <img src="@linkImg" alt="" class="your_picture_image">
