--- a/CleanArch/WebApplication1/Areas/Staff/Views/Shared/_StaffLayout.cshtml
+++ b/CleanArch/WebApplication1/Areas/Staff/Views/Shared/_StaffLayout.cshtml
@@ -142,36 +142,14 @@
         <div class="nk-sidebar">
             <div class="nk-nav-scroll">
                 <ul class="metismenu" id="menu">
-                    <li class="nav-label">Dashboard</li>
-                    <li>
-                        <a asp-controller="Dashboard" asp-action="Index">
-                            <i class="icon-speedometer menu-icon"></i> <span class="nav-text">Dashboard</span>
-                        </a>
-                    </li>
-                    <li class="nav-label">Apps</li>
-                    <li>
-                        <a asp-controller="QuanLyNhanVien" asp-action="Index">
-                            <i class="icon-grid menu-icon"></i> <span class="nav-text">Quản lý nhân viên</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-controller="PhongBan" asp-action="Index">
-                            <i class="icon-tag menu-icon"></i> <span class="nav-text">Quản lý phòng ban</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-controller="HopDong" asp-action="Index">
-                            <i class="icon-basket menu-icon"></i> <span class="nav-text">Quản lý hợp đồng</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a asp-controller="BangLuong" asp-action="Index">
-                            <i class="icon-note menu-icon"></i> <span class="nav-text">Bảng lương</span>
-                        </a>
-                    </li>
                     <li>
                         <a asp-controller="NhanVien" asp-action="Index">
-                            <i class="icon-people menu-icon"></i> <span class="nav-text">Users</span>
+                            <i class="icon-people menu-icon"></i> <span class="nav-text">Thông tin cá nhân</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-controller="LuongNhanVien" asp-action="Index">
+                            <i class="icon-note menu-icon"></i> <span class="nav-text">Bảng lương</span>
                         </a>
                     </li>
                 </ul>
