--- a/CleanArch/WebApplication1/Areas/Admin/Views/Duan/DuanDetail.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Duan/DuanDetail.cshtml
@@ -61,7 +61,7 @@
                         <form method="post" asp-controller="DuAn" asp-action="RemoveMultiNVDA">
                             <div class="table-responsive">
                                 <table id="DataTable" class="table table-bordered table-hover zero-configuration">
-                                    <thead>
+                                    <thead class="text-primary">
                                         <tr>
                                             <th style="width:20%;" class="th-center-bold">Hình ảnh</th>
                                             <th style="width:15%;" class="th-center-bold">Mã nhân viên</th>
@@ -87,7 +87,7 @@
                                                 linkImg += "form-user.png";
                                             }
                                             <tr>
-                                                <td><img src="@linkImg" alt="" style="width:40%" ;=""></td>
+                                                <td class="td-center"><img src="@linkImg" alt="" style="width:40%" ;=""></td>
                                                 <td>@nhanVienDuAn.NhanVienId</td>
                                                 <td>@nhanVienDuAn.HoNhanVien @nhanVienDuAn.TenNhanVien</td>
                                                 <td>@nhanVienDuAn.TenPhongBan</td>
