--- a/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -185,6 +185,11 @@
                         </a>
                     </li>
                     <li>
+                        <a asp-controller="Phucap" asp-action="Index">
+                            <i class="icon-people menu-icon"></i> <span class="nav-text">Quản lý phụ cấp</span>
+                        </a>
+                    </li>
+                    <li>
                         <a asp-controller="BangLuong" asp-action="Index">
                             <i class="icon-note menu-icon"></i> <span class="nav-text">Bảng lương</span>
                         </a>
