--- a/CleanArch/WebApplication1/Areas/Admin/Views/Phucap/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Phucap/Index.cshtml
@@ -12,7 +12,7 @@
         <div class="col p-md-0">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="./index.php">Dashboard</a></li>
-                <li class="breadcrumb-item active">Categories</li>
+                <li class="breadcrumb-item active">Quản lý phụ cấp</li>
             </ol>
         </div>
     </div>
@@ -26,7 +26,7 @@
                         @if (ViewBag.Update == "yes")
                         {
                             <div class="card-title">
-                                <h4>Thêm Dự Án</h4>
+                                <h3>SỬA PHỤ CẤP</h3>
                                 @if (ViewBag.Error != null)
                                 {
                                     <h5><p class="td-center" style="color:red;">@ViewBag.Error</p></h5>
@@ -35,45 +35,49 @@
                             <form method="post" asp-controller="PhuCap" asp-action="Update">
                                 <div class="form-group">
                                     <label for="maphucap">Mã phụ cấp</label>
-                                    <input type="text" value="@Model.phuCapDTO.PhuCapId" placeholder="Mã dự án" class="form-control" name="PhuCapId" required>
+                                    <input type="text" value="@Model.phuCapDTO.PhuCapId" placeholder="Số liệu tự cấp phát..." class="form-control" name="PhuCapId" required readonly="readonly">
                                 </div>
                                 <div class="form-group">
                                     <label for="tenphucap">Tên tên phụ cấp</label>
-                                    <input type="text" value="@Model.phuCapDTO.TenPhuCap" placeholder="Tên dự án" class="form-control" name="TenPhuCap" required>
+                                    <input type="text" value="@Model.phuCapDTO.TenPhuCap" placeholder="Nhập tên phụ cấp..." class="form-control" name="TenPhuCap" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="tienphucap">Tiền phụ cấp</label>
-                                    <input type="text" value="@Model.phuCapDTO.TienPhuCap" placeholder="Thưởng dự án" class="form-control" name="TienPhuCap" required>
+                                    <input type="text" value="@Model.phuCapDTO.TienPhuCap" placeholder="Nhập tiền phụ cấp..." class="form-control" name="TienPhuCap" required>
                                 </div>
-                                <div class="form-group">
-                                    <input type="submit" value="themphucap" name="themphucap" class="btn btn-primary">
-                                </div>
+                                <input type="submit" value="Sửa thông tin" name="suaduan" class="btn btn-primary">
+                                <a asp-controller="Phucap" asp-action="Index" style="float: right;"><button type="button" class="btn btn-danger">Hủy</button></a>
                             </form>
                         }
                         else
                         {
                             <div class="card-title">
-                                <h4>Thêm Dự Án</h4>
+                                <h4>THÊM PHU CẤP</h4>
                                 @if (ViewBag.Error != null)
                                 {
                                     <h5><p class="td-center" style="color:red;">@ViewBag.Error</p></h5>
                                 }
                             </div>
-                            <form method="post" asp-controller="DuAn" asp-action="AddPhuCap">
+                            <form method="post" asp-controller="Phucap" asp-action="AddPhuCap">
                                 <div class="form-group">
-                                    <label for="maphucap">Mã phụ cấp</label>
-                                    <input type="text" value="@Model.phuCapDTO.PhuCapId" placeholder="Mã dự án" class="form-control" name="PhuCapId" required>
+                                    <label for="mada">Mã phụ cấp <span class="text-danger">*</span></label>
+                                    <div class="input-group">
+                                        <input type="text" name="PhuCapId" id="mapc" class="form-control" placeholder="Số liệu tự cấp phát.." readonly="readonly">
+                                        <div class="input-group-append">
+                                            <button id="btn-pb" class="btn btn-outline-dark" type="button" onclick="CapPhatMaPC()"><i class="fa fa-plus"></i></button>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
-                                    <label for="tenphucap">Tên tên phụ cấp</label>
-                                    <input type="text" value="@Model.phuCapDTO.TenPhuCap" placeholder="Tên dự án" class="form-control" name="TenPhuCap" required>
+                                    <label for="tenphucap">Tên phụ cấp</label>
+                                    <input type="text" placeholder="Nhập tên dự án..." class="form-control" name="TenPhuCap" required>
                                 </div>
                                 <div class="form-group">
                                     <label for="tienphucap">Tiền phụ cấp</label>
-                                    <input type="text" value="@Model.phuCapDTO.TienPhuCap" placeholder="Thưởng dự án" class="form-control" name="TienPhuCap" required>
+                                    <input type="number" placeholder="Nhập tiền phụ cấp..." class="form-control" name="TienPhuCap" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" value="themphucap" name="themphucap" class="btn btn-primary">
+                                    <input type="submit" value="Thêm phụ cấp" name="themphucap" class="btn btn-primary">
                                 </div>
                             </form>
                         }
@@ -83,19 +87,23 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title">
-                            <h4>Thêm nhân viên vào phụ cấp</h4>
+                            <h3>THÊM NHÂN VIÊN VÀO PHỤ CẤP</h3>
+                            @if (ViewBag.ErrorNVPC != null)
+                            {
+                                <h5><p class="td-center" style="color:red;">@ViewBag.ErrorNVPC</p></h5>
+                            }
                         </div>
                         <form method="post" asp-controller="PhuCap" asp-action="AddNVPC">
                             <div class="form-group">
-                                <label for="maphucap">Mã phụ cấp</label>
-                                <input type="text" placeholder="" class="form-control" name="PhuCapId" required>
+                                <label for="PhuCapId">Mã phụ cấp</label>
+                                <input type="text" placeholder="Nhập mã phụ cấp..." class="form-control" name="PhuCapId" required>
                             </div>
                             <div class="form-group">
-                                <label for="manhanvien">Mã nhân viên</label>
-                                <input type="text" placeholder="" class="form-control" name="NhanVienId" required>
+                                <label for="NhanVienId">Mã nhân viên</label>
+                                <input type="text" placeholder="Nhập mã nhân viên..." class="form-control" name="NhanVienId" required>
                             </div>
                             <div class="form-group">
-                                <input type="submit" value="Thêm nhân viên" name="edit-category" class="btn btn-primary">
+                                <input type="submit" value="Thêm nhân viên" name="themnvpc" class="btn btn-primary">
                             </div>
                         </form>
                     </div>
@@ -105,7 +113,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="card-title">
-                            <h3>Dự Án</h3>
+                            <h4>DANH SÁCH PHỤ CẤP</h4>
                             @if (ViewBag.ErrorRemove == "yes")
                             {
                                 <p class="td-center" style="color:red;">@ViewBag.Remove</p>
@@ -116,29 +124,43 @@
                             }
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-bordered table-striped table-hover">
-                                <thead>
+                            <table class="table table-bordered table-hover">
+                                <thead class="text-primary">
                                     <tr>
-                                        <th>Mã phụ cấp</th>
-                                        <th>Tên phụ cấp</th>
-                                        <th>Thưởng phụ cấp</th>
-                                        <th>Chi tiết</th>
-                                        <th>Sửa</th>
-                                        <th>Xóa</th>
+                                        <th class="th-center-bold">Mã phụ cấp</th>
+                                        <th class="th-center-bold">Tên phụ cấp</th>
+                                        <th class="th-center-bold">Thưởng phụ cấp</th>
+                                        <th class="th-center-bold">Chi tiết</th>
+                                        <th class="th-center-bold">Sửa</th>
+                                        <th class="th-center-bold">Xóa</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (PhuCapDTO phuCapDTO in Model.phuCapDTOs)
                                     {
-                                        <tr>
-                                            <td>@phuCapDTO.PhuCapId</td>
-                                            <td>@phuCapDTO.TenPhuCap</td>
-                                            <td>@phuCapDTO.TienPhuCap</td>
-                                            <td style="text-align: center"><a asp-controller="PhuCap" asp-action="PhucapDetail" method="post" ><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
-                                            <td style="text-align: center"><a asp-controller="PhuCap" asp-action="UpdateId" method="post"  ><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
-                                            <td style="text-align: center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(phuCapDTO.PhuCapId
-                                            + "xoa")"><i class="fa fa-close"></i></button></td>
-                                        </tr>
+                                    <tr>
+                                        <td>@phuCapDTO.PhuCapId</td>
+                                        <td>@phuCapDTO.TenPhuCap</td>
+                                        <td>@phuCapDTO.TienPhuCap</td>
+                                        <td class="td-center">
+                                            <form asp-controller="Phucap" asp-action="PhucapDetail" method="post">
+                                                <input value="@phuCapDTO.PhuCapId" type="hidden" name="PhuCapId" />
+                                                <button type="submit" class="btn btn-primary"><i class="fa fa-info"></i></button>
+                                            </form>
+                                        </td>
+                                        <td class="td-center">
+                                            <form asp-controller="Phucap" asp-action="UpdateId" method="post">
+                                                <input value="@phuCapDTO.PhuCapId" type="hidden" name="PhuCapId" />
+                                                <button type="submit" class="btn btn-primary"><i class="fa fa-pencil"></i></button>
+                                            </form>
+                                        </td>
+                                        <td style="text-align: center">
+                                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(phuCapDTO.PhuCapId
+                                            + "xoa")">
+                                                <i class="fa fa-close"></i>
+                                            </button>
+                                        </td>
+                                    </tr>
                                         
                                     }
 
@@ -155,12 +177,12 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;text-align: center;">Bạn chắc chắn muốn xóa<br>dự án @phuCapDTO.TenPhuCap?</h3>
+                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;text-align: center;">Bạn chắc chắn muốn xóa<br>phụ cấp @phuCapDTO.TenPhuCap?</h3>
                         </div>
                         <div class="modal-footer" style="margin: auto;">
                             <button type="button" class="btn btn-primary" data-dismiss="modal">Hủy</button>
-                            <form method="post" asp-controller="DuAn" asp-action="Remove">
-                                <button name="DuAnId" type="submit" class="btn btn-danger" value="@phuCapDTO.PhuCapId">Xóa dự án</button>
+                            <form method="post" asp-controller="Phucap" asp-action="Remove">
+                                <button name="PhuCapId" type="submit" class="btn btn-danger" value="@phuCapDTO.PhuCapId">Xóa phụ cấp</button>
                             </form>
                         </div>
                     </div>
@@ -170,3 +192,9 @@
     </div>
     <!-- #/ container -->
 </div>
+<script>
+    function CapPhatMaPC() {
+        $('#mapc').val('@AutoKey.InCreasedByOne(Model.thongTinDuLieuCuois.PhuCapId)');
+        $('#btn-pb').prop('disabled', true);
+    }
+</script>
