--- a/CleanArch/WebApplication1/Areas/Admin/Views/BangLuong/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/BangLuong/Index.cshtml
@@ -196,7 +196,7 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-bordered table-hover">
+                            <table id="DataTable" class="table table-bordered table-hover zero-configuration">
                                 <thead class="text-primary">
                                     <tr>
                                         <th style="width:15%;" class="th-center-bold">Hình ảnh</th>
