--- a/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Details.cshtml
@@ -59,10 +59,20 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        @{ string linkImg = ""; }
                                         @foreach (QuanLyNhanVien quanLyNhanVien in Model.quanLyNhanViens)
                                         {
+                                            linkImg = "../images/user/";
+                                            if (quanLyNhanVien.HinhAnh != null)
+                                            {
+                                                linkImg += quanLyNhanVien.HinhAnh;
+                                            }
+                                            else
+                                            {
+                                                linkImg += "form-user.png";
+                                            }
                                             <tr>
-                                                <td><img src="~/product-img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></td>
+                                                <td><img src="@linkImg" alt="" style="width:40%" ;=""></td>
                                                 <td> @quanLyNhanVien.NhanVienId </td>
                                                 <td> @quanLyNhanVien.HoNhanVien @quanLyNhanVien.TenNhanVien </td>
                                                 <td> @quanLyNhanVien.TenPhongBan </td>
@@ -77,7 +87,7 @@
                                                 else
                                                 {
                                                     <td class="td-center">
-                                                        <input type="checkbox" name="NhanVienId" value="@quanLyNhanVien.NhanVienId" class="custom-checkbox chkCheckBoxId" onclick="checkSingleDel()"/>
+                                                        <input type="checkbox" name="NhanVienId" value="@quanLyNhanVien.NhanVienId" class="custom-checkbox chkCheckBoxId" onclick="checkSingleDel()" />
                                                     </td>
                                                 }
                                             </tr>
