--- a/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -93,7 +93,7 @@
         ***********************************-->
         <div class="nav-header">
             <div class="brand-logo">
-                <a href="index.php">
+                <a asp-controller="Dashboard" asp-action="Index">
                     <b class="logo-abbr"><img src="~/images/logo.png" alt=""> </b>
                     <span class="logo-compact"><img src="~/images/logo-compact.png" alt=""></span>
                     <span class="brand-title">
